<resources>
    <string name="app_name">My Template</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hallo blank fragment</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="register">Register</string>
    <string name="title_login">Login</string>
    <string name="transaksi">Transaksi</string>
    <string name="product">Product</string>
    <string name="add_product">Tambah Product</string>
    <string name="management_product">Management Product</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="name">Name</string>
    <string name="searchbar_hint">Cari Produk</string>
    <string name="barcode">Barcode</string>
    <string name="stock">Stock</string>
    <string name="product_name">Nama Produk</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="kategori">Kategori</string>
    <string name="tambah">Tambah</string>
    <string name="success_add_product">Produk %1$s berhasil ditambahkan</string>
    <string name="error_product_name_empty">Nama produk tidak boleh kosong</string>
    <string name="error_product_sell_price_empty">Harga jual tidak boleh kosong</string>
    <string name="error_product_purchase_price_empty">Harga beli tidak boleh kosong</string>
    <string name="error_product_stock_empty">Stok tidak boleh kosong</string>
    <string name="failed_add_product">Gagal menambahkan produk %1$s</string>
    <string name="select_category">Pilih Kategori</string>
    <string name="select">Pilih</string>
    <string name="update">Perbarui</string>
    <string name="add">Tambah</string>
    <string name="update_product">Perbarui Produk</string>
</resources>