<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashScreenFragment">
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.fajar.template.ui.home.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_splashScreenFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashScreenFragment_to_homeFragment2"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.fajar.template.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment2"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fajar.template.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_productManagementFragment"
            app:destination="@id/productManagementFragment" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.fajar.template.ui.home.product.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/productManagementFragment"
        android:name="com.fajar.template.ui.home.product.ProductManagementFragment"
        android:label="@string/management_product"
        tools:layout="@layout/fragment_product_management" />
</navigation>